--- a/src/views/detalleproducto.ejs
+++ b/src/views/detalleproducto.ejs
@@ -60,7 +60,7 @@
 
             <article>
                 <div class="modelo-delivery">
-                    <h2 class="titulo-modelo">Modelo <%= modelos.nombreModelo%> </h2>
+                    <h2 class="titulo-modelo"><%= modelos.nombreModelo%> </h2>
                     <h3>Delivery estimado <%= modelos.deliveryEstimado%></h3>
                 </div>
             
