--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -7,12 +7,12 @@
             <button class="cruz" type="button"><i class="fa-solid fa-xmark"></i></button>
             <ul class="enlaces-menu">
                 <li><a href="/login" class="cuenta">Cuenta</a></li>
-                <li><a href="/Carrito">Carrito</a></li>
-                <li><a href="/Carrito">Comprar</a></li>
+                <li><a href="/products/Carrito">Carrito</a></li>
+                <li><a href="/products">Todos los productos</a></li>
                 <li><a href="/Contacto">Contacto</a></li>
                 <li><a href="/Contacto">Soporte</a></li>
-                <li><a href="/crearproducto">Crear Producto</a></li>
-                <li><a href="/editarproducto">Editar Producto</a></li>
+                <li><a href="/products/crearproducto">Crear Producto</a></li>
+                <li><a href="/products/editarproducto">Editar Producto</a></li>
             </ul>
 
 
