--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -1084,7 +1084,7 @@ main section article div h3{
     color:#6a6a6a;
 }
 
-#correo, #contraseña, #idProducto, #descripcionProducto, #precioProducto, #nombre, #nombreProducto, #apellido, #caracteres{
+#correo, #contraseña, #idProducto, #descripcionProducto, #precioProducto, #nombre, #nombreProducto, #apellido, #caracteres, #autonomia, #velocidadMaxima, #tiempoDeCeroCien{
     background-color: #ececec;
     border-radius: 20px;
     margin: 5px auto 0 auto;
@@ -1227,7 +1227,7 @@ main section article div h3{
 
 /*---EDICION PRODUCTO---*/
 
-#correo-imagen {
+#imgProducto {
     background-color: white;
     border-radius: 20px;
     margin: 5px auto 0 auto;
