--- a/src/views/crearproducto.ejs
+++ b/src/views/crearproducto.ejs
@@ -18,56 +18,32 @@ Precio (p​ rice​)
             <div clas="big-container">
 
                 <div class="single-column">
-                <form action="/products/crearproducto" method="POST" class="form-login" enctype="multipart/form-data">
+                <form action="/products" method="POST" class="form-login" enctype="multipart/form-data">
 
                     <h2 class="titulo-login">Crear Producto</h2>
 
                     <div class="correo-contra">
 
                         <label for="nombreProducto" class="label-correo">Nombre del Producto</label>
-                        <input type="text" name="nombreProducto" id="nombreProducto" required>
+                        <input type="text" name="nombreModelo" id="nombreProducto" value="Modelo X" required>
 
                         <label for="descripcionProducto" class="label-correo">Descripción</label>
-                        <input type="textarea" name="descripcionProducto" id="descripcionProducto" required>
+                        <input type="textarea" name="descripcion" id="descripcionProducto" value= "Lorem ipsum dolor sit amet consectetur." required>
 
                         <label for="imgProducto" class="label-correo">Imagen del producto</label>
-                        <input type="file" name="imgProducto" id="correo-imagen" required>
+                        <input type="file" name="imgModelo" id="imgProducto" required>
 
                         <label for="precioProducto" class="label-correo">Precio</label>
-                        <input type="number" name="precioProducto" id="precioProducto" required>
+                        <input type="text" name="precio" id="precioProducto" value="$1.5M" required>
+                        
+                        <label for="autonomia" class="label-correo">Autonomía</label>
+                        <input type="text" name="autonomia" id="autonomia" value="1000 kilómetros" required>
 
-                        <label for="contraseña" class="label-contra">Tipo de Ruedas</label>
-                        <div class="interests">
-                            <div>
-                                <input type="checkbox" name="interests" value="a" id="a">
-                                <label for="a">Ruedas Tipo 1</label>
-                            </div>
-                            <div>
-                                <input type="checkbox" name="interests" value="b" id="b">
-                                <label for="b">Ruedas Tipo 2</label>
-                            </div>
-                        </div>
+                        <label for="velocidadMaxima" class="label-correo">Velocidad Máxima</label>
+                        <input type="text" name="velocidadMaxima" id="velocidadMaxima" value="180 km/h" required>
 
-                        <label for="contraseña" class="label-contra">Colores Disponibles</label>
-                        <div class="interests">
-                            <div>
-                                <input type="checkbox" name="interests" value="c" id="c">
-                                <label for="c">Color 1</label>
-                            </div>
-                            <div>
-                                <input type="checkbox" name="interests" value="d" id="d">
-                                <label for="d">Color 2</label>
-                            </div>
-                            <div>
-                                <input type="checkbox" name="interests" value="e" id="e">
-                                <label for="e">Color 3</label>
-                            </div>
-                            <div>
-                                <input type="checkbox" name="interests" value="f" id="f">
-                                <label for="f">Color 4</label>
-                            </div>
-                        </div>
-
+                        <label for="tiempoDeCeroCien" class="label-correo">Tiempo de cero a 100 km/h</label>
+                        <input type="text" name="tiempoDeCeroCien" id="tiempoDeCeroCien" value="25 segundos" required>
 
                     </div>
                     
