Se agrego la vista de todos los usuarios y se agrego la vista y ruta para crear usuarios (Tenemos problemas para crear usuarios)

--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -7,7 +7,7 @@
     <main>
 
                 <div class="single-column">
-                <form action="/" method="POST" class="form-login">
+                <form action="/users" method="POST" class="form-login">
 
                     <h2 class="titulo-login">Crear cuenta</h2>
 
