crud de usuarios funcionando, solo resta la ruta y metodo para eliminar un usuario

--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -13,23 +13,23 @@
 
                     <div class="correo-contra">
 
-                        <label for="nombre" class="label-correo">Nombres</label>
-                        <input type="text" name="nombre" id="nombre" required>
+                        <label for="nombres" class="label-correo">Nombres</label>
+                        <input type="text" name="nombres" id="nombre" required>
 
-                        <label for="apellido" class="label-correo">Apellidos</label>
-                        <input type="text" name="apellido" id="apellido" required>
+                        <label for="apellidos" class="label-correo">Apellidos</label>
+                        <input type="text" name="apellidos" id="apellido" required>
 
-                        <label for="correo" class="label-correo">Correo electrónico</label>
-                        <input type="email" name="correo" id="correo" required>
+                        <label for="correoElectronico" class="label-correo">Correo electrónico</label>
+                        <input type="email" name="correoElectronico" id="correo" required>
 
-                        <label for="contraseña" class="label-contra">Contraseña</label>
-                        <input type="password" name="contraseña" id="contraseña" required>
+                        <label for="password" class="label-contra">Contraseña</label>
+                        <input type="password" name="password" id="contraseña" required>
                     </div>
                     
                     
 
                     <div class="div-login-button">
-                        <button class="register-button" type="submit" name="ingreso">CREAR UNA CUENTA</button>
+                        <button class="register-button" type="submit" >CREAR UNA CUENTA</button>
                     </div>
 
                 </form>
