--- a/src/views/editarUsuario.ejs
+++ b/src/views/editarUsuario.ejs
@@ -7,7 +7,7 @@
     <main>
 
                 <div class="single-column">
-                <form action="/users/actualizar/<%= usuarioToEdit.id %>?_method=PUT" method="POST" class="form-login">
+                <form action="/users/<%= usuarioToEdit.id %>/editar?_method=PUT" method="POST" class="form-login">
 
                     <h2 class="titulo-login">Editar Usuario</h2>
 
@@ -29,7 +29,7 @@
                     
 
                     <div class="div-login-button">
-                        <button class="register-button" type="submit" name="ingreso">Guardar</button>
+                        <button class="register-button" type="submit" >Guardar</button>
                     </div>
 
                 </form>
