crud de usuarios completamente operativo

--- a/src/views/editarUsuario.ejs
+++ b/src/views/editarUsuario.ejs
@@ -34,6 +34,10 @@
 
                 </form>
 
+                <form action="/users/<%= usuarioToEdit.id %>/eliminar?_method=DELETE" method="POST" class="form-login">
+                    <button type="submit" class="register-button">ELIMINAR</button>
+                </form>
+
         </div>
 
         </main>
