--- a/src/views/editarproducto.ejs
+++ b/src/views/editarproducto.ejs
@@ -64,7 +64,10 @@ Precio (p​ rice​)
 
                 </form>
 
-            
+                <form action="/products/<%= productToEdit.idModelo %>/eliminar?_method=DELETE" method="POST" class="form-login">
+                     <button class="register-button" type="submit" name="eliminar">Eliminar Producto</button>
+                </form>
+                
         
             </div>
 
