Solucionamos problemas del editar

--- a/src/views/editarproducto.ejs
+++ b/src/views/editarproducto.ejs
@@ -59,7 +59,7 @@ Precio (p​ rice​)
                     
                     
                     <div class="div-login-button">
-                        <button class="register-button" type="submit" name="ingreso">Guardar Producto</button>
+                        <button class="register-button" type="submit">Guardar Producto</button>
                     </div>
 
                 </form>
