--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,8 +3,11 @@
     <%- include('./partials/head')%>
 <body>
 
-    <%- include('./partials/header')%>
+    <%- include('./partials/header-prueba2')%>
 
+    <div class="container-blur" id="filter">
+        
+    </div>
 
     <main>
         <section id="main-section-index">
