--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <%- include('./partials/head')%>
-<body>
-    <%- include('./partials/header-2')%>
+<body class="body-login">
+
+    <%- include('./partials/header-prueba2sin')%>
 
     <main>
 
             <div clas="big-container">
 
                 <div class="single-column">
-                <form action="/" method="POST" class="form-login">
+                <form action="/" method="POST" class="form-login"c>
 
                     <h2 class="titulo-login">Iniciar sesión</h2>
 
@@ -54,7 +55,7 @@
 
         </main>
 
-        <%- include('./partials/footer-2')%>
+        <%- include('./partials/footerprueba')%>
         <script src="/js/main.js" type="module"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
