--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,9 +1,11 @@
 <header>
 
-    <div class="barra-blanca">
 <!--Navegador mobile-->
         <nav class="navbar">
+            <div class="barra-blanca">
             <a href="/"><h1>CARMAKERS</h1></a>
+
+            <!--
             <button class="cruz" type="button"><i class="fa-solid fa-xmark"></i></button>
             <ul class="enlaces-menu">
                 <li><a href="/login" class="cuenta">Cuenta</a></li>
@@ -14,23 +16,23 @@
                 <li><a href="/products/crearproducto">Crear Producto</a></li>
                 <li><a href="/products/editarproducto">Editar Producto</a></li>
             </ul>
+            -->
 
-
-
-            <button class="menu" type="button">Menú</button>
-            <button class="cuenta-button" type="button"><a href="/login">Cuenta</a></button>
-            <button class="carrito-button" type="button"><a href="/Carrito">Carrito</a></button>
-
-            
                 <ul class="enlaces-productos">
                     <% for(i=1; i<6; i++){ %>
                     <li><a href="#seccion-<%=i%>">Modelo <%=i%></a></li>
                     <% } %>
                 </ul>
 
+
+            <ul class="botones-nav">
+                <li><button class="menu" type="button">Menú</button></li>
+                <li><button class="cuenta-button" type="button"><a href="/login">Cuenta</a></button></li>
+                <li><button class="carrito-button" type="button"><a href="/Carrito">Carrito</a></button></li>
+            </div>
+        </div>
     </nav>
 
 
-    </div>
 
 </header>
