--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,6 +4,7 @@
 <body>
 
     <%- include('./partials/header-prueba2')%>
+    <%- include('./partials/menuResponsive')%>
 
     <div class="container-blur" id="filter">
         
