Renove el navegador

--- a/src/views/carrito.ejs
+++ b/src/views/carrito.ejs
@@ -2,7 +2,8 @@
 <html lang="en">
     <%- include('./partials/head')%>
 <body>
-    <%- include('./partials/header-2')%>
+    <%- include('./partials/header-prueba2')%>
+    <%- include('./partials/menuResponsive')%>
 
     <main class="main-carrito">
 
