--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -3,7 +3,8 @@
     <%- include('./partials/head')%>
 <body class="body-login">
 
-    <%- include('./partials/header-prueba2sin')%>
+    <%- include('./partials/header-2')%>
+    <%- include('./partials/menuResponsive')%>
 
     <main>
 
