--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -3,6 +3,7 @@
     <%- include('./partials/head')%>
 <body>
     <%- include('./partials/header-2')%>
+    <%- include('./partials/menuResponsive')%>
 <main class="main-inv">
     <h1 class="inventario">Inventario</h1>
 
