--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,7 +3,7 @@
     <%- include('./partials/head')%>
 <body>
 
-    <%- include('./partials/header-prueba2')%>
+    <%- include('./partials/header-1')%>
     <%- include('./partials/menuResponsive')%>
 
     <div class="container-blur" id="filter">
