--- a/src/views/partials/menuResponsive.ejs
+++ b/src/views/partials/menuResponsive.ejs
@@ -1,7 +1,7 @@
 <button class="cruz" type="button"><i class="fa-solid fa-xmark"></i></button>
 <ul class="enlaces-menu">
     <li><a href="/login" class="cuenta">Cuenta</a></li>
-    <li><a href="/products/Carrito">Carrito</a></li>
+    <li><a href="/Carrito">Carrito</a></li>
     <li><a href="/products">Todos los productos</a></li>
     <li><a href="/Contacto">Contacto</a></li>
     <li><a href="/Contacto">Soporte</a></li>
