Arregle el footer resumido

--- a/src/views/partials/footer-2.ejs
+++ b/src/views/partials/footer-2.ejs
@@ -1,10 +1,10 @@
-<footer id="footer-carrito">
+<footer class="footerprueba">
 
-    <div class="copy-carrito">
-        <p class="car-carrito">CarMakers © 2022</p>
+    <div>
+        <p class="car-footer">CarMakers © 2022</p>
     </div>
 
-    <div class="links-carrito">
+    <div class="links-footer">
         <a href="/sobrenosotros.html">Sobre Nosotros</a>
         <a href="/terminos.html">Términos y Condiciones</a>
     </div>
