--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -89,18 +89,7 @@
     </section>
 </main>
 
-<footer id="footer-productos">
-
-    <div class="copy-carrito">
-        <p class="car-productos">CarMakers © 2022</p>
-    </div>
-
-    <div class="links-productos">
-        <a href="/sobrenosotros.html">Sobre Nosotros</a>
-        <a href="/terminos.html">Términos y Condiciones</a>
-    </div>
-
-</footer>
+<%- include('./partials/footer-2')%>
 
     <script src="/js/main.js" type="module"></script>
 </body>
