Solucionados los enlaces rotos y nav y footer actualizados en todas las paginas

--- a/src/views/carrito.ejs
+++ b/src/views/carrito.ejs
@@ -2,8 +2,9 @@
 <html lang="en">
     <%- include('./partials/head')%>
 <body>
-    <%- include('./partials/header-prueba2')%>
+    <%- include('./partials/header-2')%>
     <%- include('./partials/menuResponsive')%>
+    <div class="container-blur" id="filter"></div>
 
     <main class="main-carrito">
 
