--- a/src/views/detalleproducto.ejs
+++ b/src/views/detalleproducto.ejs
@@ -3,8 +3,8 @@
     <%- include('./partials/head')%>
 <body>
     <%- include('./partials/header-2')%>
-
-
+    <%- include('./partials/menuResponsive')%>
+    <div class="container-blur" id="filter"></div>
 
     <main class="main-article" id="main-detalle">
 
