--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -4,6 +4,8 @@
 <body>
     <%- include('./partials/header-2')%>
     <%- include('./partials/menuResponsive')%>
+    <div class="container-blur" id="filter"></div>
+    
 <main class="main-inv">
     <h1 class="inventario">Inventario</h1>
 
