--- a/src/views/editarUsuario.ejs
+++ b/src/views/editarUsuario.ejs
@@ -2,7 +2,10 @@
 <html lang="en">
     <%- include('./partials/head')%>
 <body class="body-reg">
+    
     <%- include('./partials/header-2')%>
+    <%- include('./partials/menuResponsive')%>
+    <div class="container-blur" id="filter"></div>
 
     <main>
 
