--- a/src/views/editarproducto.ejs
+++ b/src/views/editarproducto.ejs
@@ -3,6 +3,8 @@
     <%- include('./partials/head')%>
 <body>
     <%- include('./partials/header-2')%>
+    <%- include('./partials/menuResponsive')%>
+    <div class="container-blur" id="filter"></div>
 
 <!-- 
     Nombre del producto (n​ ame)​
