--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -5,6 +5,7 @@
 
     <%- include('./partials/header-2')%>
     <%- include('./partials/menuResponsive')%>
+    <div class="container-blur" id="filter"></div>
 
     <main>
 
