--- a/src/views/partials/menuResponsive.ejs
+++ b/src/views/partials/menuResponsive.ejs
@@ -1,10 +1,10 @@
 <button class="cruz" type="button"><i class="fa-solid fa-xmark"></i></button>
 <ul class="enlaces-menu">
-    <li><a href="/login" class="cuenta">Cuenta</a></li>
-    <li><a href="/Carrito">Carrito</a></li>
+    <li><a href="/login" class="cuenta">Iniciar Sesión</a></li>
+    <li><a href="/register" class="cuenta">Crear Cuenta</a></li>
+    <li><a href="/carrito">Carrito</a></li>
     <li><a href="/products">Todos los productos</a></li>
-    <li><a href="/Contacto">Contacto</a></li>
-    <li><a href="/Contacto">Soporte</a></li>
+    <li><a href="/users/editarUsuario/1">Editar Usuario</a></li>
     <li><a href="/products/crearproducto">Crear Producto</a></li>
     <li><a href="/products/editarproducto">Editar Producto</a></li>
 </ul>
