--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -3,7 +3,8 @@
     <%- include('./partials/head')%>
 <body class="body-reg">
     <%- include('./partials/header-2')%>
-
+    <%- include('./partials/menuResponsive')%>
+    <div class="container-blur" id="filter"></div>
     <main>
 
                 <div class="single-column">
