Empezamos el login y el register

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,10 +5,7 @@
 
     <%- include('./partials/header-1')%>
     <%- include('./partials/menuResponsive')%>
-
-    <div class="container-blur" id="filter">
-        
-    </div>
+    <div class="container-blur" id="filter"></div>
 
     <main>
         <section id="main-section-index">
