--- a/src/views/partials/header-2.ejs
+++ b/src/views/partials/header-2.ejs
@@ -4,7 +4,7 @@
         
         <ul class="ul-botones-menu">
             <li><button class="compras-boton" type="button"><a href="/products">Comprar</a></button></li>
-            <li><button class="login-boton" type="button"><a href="/login">Cuenta</a></button></li>
+            <li><button class="login-boton" type="button"><a href="/users/login">Cuenta</a></button></li>
             <li class="menu-boton"><button type="button">Menú</button></li>
     </ul>
 
