--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -8,7 +8,7 @@
     <main>
 
                 <div class="single-column">
-                <form action="/register" method="POST" class="form-login" enctype="multipart/form-data">
+                <form action="/users/register" method="POST" class="form-login" enctype="multipart/form-data">
 
                     <h2 class="titulo-login">Crear cuenta</h2>
 
