Se puede registrar y loguearse

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -12,7 +12,7 @@
             <div clas="big-container">
 
                 <div class="single-column">
-                <form action="/users" method="POST" class="form-login">
+                <form action="/users/login" method="POST" class="form-login">
 
                     <h2 class="titulo-login">Iniciar sesión</h2>
                     <%- include('./partials/validation')%>
