Agregue el remember me

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -25,7 +25,7 @@
                     </div>
                     
                     <div class="recuerdame">
-                        <input class="checkbox-box" type="checkbox" value="lsRememberMe" id="rememberMe"> 
+                        <input class="checkbox-box" type="checkbox" value="lsRememberMe" id="rememberMe" name="rememberMe"> 
                         <label class="checkbox-label" for="rememberMe">Recuérdame</label>
                     </div>
 
