Links rotos del sprint 4 solucionado

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -39,15 +39,15 @@
             <div class="olvido">
 
                 <div class="olvido-correo">
-                    <a href="/support.html">¿Olvidó el correo electrónico?</a>
+                    <a href="/construccion">¿Olvidó el correo electrónico?</a>
                 </div>
 
                 <div class="olvido-contraseña">
-                    <a href="/resetpass.html">¿Olvidó la contraseña?</a>
+                    <a href="/construccion">¿Olvidó la contraseña?</a>
                 </div>
             </div>
 
-        <p class="no-account">¿No tiene una cuenta?</p>
+            <h3 class="tiene-cuenta">¿No tiene una cuenta?</h3>
 
         <div class="boton-crear-cuenta">
             <button class="account-button" type="submit" name="ingreso"><a href="/users/register">CREAR UNA CUENTA</a></button>
