--- a/src/views/partials/footer-1.ejs
+++ b/src/views/partials/footer-1.ejs
@@ -70,10 +70,10 @@
             <div class="footer-item">
                 <h6>Links rápidos</h6>
                 <ul class="lista-links">
-                    <li><a href="/">Comprar online</a></li>
-                    <li><a href="/">Configurar mi auto</a></li>
-                    <li><a href="/">Solicitar una oferta</a></li>
-                    <li><a href="/">Actualizar GPS</a></li>
+                    <li><a href="/construccion">Comprar online</a></li>
+                    <li><a href="/construccion">Configurar mi auto</a></li>
+                    <li><a href="/construccion">Solicitar una oferta</a></li>
+                    <li><a href="/construccion">Actualizar GPS</a></li>
                 </ul>
             </div>
 
@@ -81,9 +81,9 @@
             <div class="footer-item">
                 <h6>Descubrir</h6>
                 <ul class="lista-descubrir">
-                    <li><a href="/">Accesorios</a></li>
-                    <li><a href="/">Mantenimiento y reparación</a></li>
-                    <li><a href="/">Opciones rápidas</a></li>
+                    <li><a href="/construccion">Accesorios</a></li>
+                    <li><a href="/construccion">Mantenimiento y reparación</a></li>
+                    <li><a href="/construccion">Opciones rápidas</a></li>
                 </ul>
             </div>
 
@@ -104,10 +104,10 @@
         <div class="link-copy">
 
         <div class="links-nav">
-            <a href="/sobrenosotros.html">Sobre Nosotros</a>
-            <a href="/terminos.html">Términos y condiciones</a>
-            <a href="/cookies.html">Política de cookies</a>
-            <a href="/privacidad.html">Política de privacidad</a>
+            <a href="/construccion">Sobre Nosotros</a>
+            <a href="/construccion">Términos y condiciones</a>
+            <a href="/construccion">Política de cookies</a>
+            <a href="/construccion">Política de privacidad</a>
         </div>
 
         <div class="copy-nav">
