--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -40,17 +40,11 @@
                 </form>
 
             
-            <div class="olvido">
-
-                <div class="olvido-correo">
-                    <a href="/support.html">¿Ya tiene una cuenta?</a>
-                </div>
-
-            </div>
+        <h3 class="tiene-cuenta">¿Ya tiene una cuenta?</h3>
 
 
         <div class="boton-crear-cuenta">
-            <button class="account-button" type="submit" name="ingreso"><a href="/login">INICIAR SESIÓN</a></button>
+            <button class="account-button" type="submit" name="ingreso"><a href="/users/login">INICIAR SESIÓN</a></button>
         </div>
 
         </div>
