--- a/src/views/partials/footer-2.ejs
+++ b/src/views/partials/footer-2.ejs
@@ -5,8 +5,8 @@
     </div>
 
     <div class="links-footer">
-        <a href="/sobrenosotros.html">Sobre Nosotros</a>
-        <a href="/terminos.html">Términos y Condiciones</a>
+        <a href="/construccion">Sobre Nosotros</a>
+        <a href="/construccion">Términos y Condiciones</a>
     </div>
 
 </footer>
