Viendo si funciona el commit

--- a/src/views/construccion.ejs
+++ b/src/views/construccion.ejs
@@ -7,7 +7,7 @@
     <%- include('./partials/menuResponsive')%>
     <div class="container-blur" id="filter"></div>
     
-        <main>
+        <main class="main-construccion">
             <h2 class="ohoh">Oh, oh</h2>
             <p class="losentimos">Lo sentimos, esta página se encuentra momentáneamente fuera de servicio.</p>
         </main>
